--- a/u8g2_display/platformio.ini
+++ b/u8g2_display/platformio.ini
@@ -12,7 +12,4 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = 
-	adafruit/Adafruit SSD1306@^2.5.7
-	adafruit/Adafruit GFX Library@^1.11.7
-	adafruit/Adafruit ILI9341@^1.5.12
+lib_deps = olikraus/U8g2@^2.35.4
